--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="center hero-unit">
+	<h1>Welcome to GTDWGT</h1>
+	<h2>See https://github.com/thevoiceless/gtdwgt</h2>
+
+	<%= link_to "Sign Up", '#', class: "btn btn-large btn-primary" %>
+</div>
