Add Bootstrap, comment out all scaffold CSS, route to home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center hero-unit">
 	<h1>Welcome to GTDWGT</h1>
-	<h2>See https://github.com/thevoiceless/gtdwgt</h2>
+	<h2>See <a href="https://github.com/thevoiceless/gtdwgt">https://github.com/thevoiceless/gtdwgt</a></h2>
 
 	<%= link_to "Sign Up", '#', class: "btn btn-large btn-primary" %>
 </div>
