--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<header class="navbar navbar-fixed-top navbar-inverse">
-		<div class="navbar-inner">
-			<div class="container">
-				<%= link_to "gtdwgt", "#", { id: "logo" } %>
-				<nav>
-					<ul class="nav pull-right">
-						<li><%= link_to "Home", '#' %></li>
-						<li><%= link_to "Sign in", '#' %></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+	<%= render 'layouts/header' %>
 	<div class="container">
 		<%= yield %>
 	</div>
