--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 			<%= link_to "gtdwgt", "#", { id: "logo" } %>
 			<nav>
 				<ul class="nav pull-right">
-					<li><%= link_to "Home", '#' %></li>
+					<li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "Sign in", '#' %></li>
 				</ul>
 			</nav>
