Remove superfluous 'home' link, add debug info to pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,3 +71,11 @@ p {
 		text-decoration: none;
 	}
 }
+
+/* miscellaneous */
+
+.debug_dump {
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 45px;
+}
