Create new users when signing up, show errors

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,9 @@
+<% provide(:title, "View User") %>
 <p id="notice"><%= notice %></p>
 
 <p>
   <b>Email:</b>
   <%= @user.email %>
-</p>
-
-<p>
-  <b>Password digest:</b>
-  <%= @user.password_digest %>
 </p>
 
 
