--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,3 +79,25 @@ p {
 	margin-right: 5px;
 	margin-top: 45px;
 }
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+	border: 1px solid #bbb;
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 15px;
+}
+
+input {
+	height: auto;
+}
+
+#error_explanation {
+	color: #f00;
+}
+
+.field_with_errors {
+	@extend .control-group;
+	@extend .error;
+}
