--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,7 +66,7 @@ p {
 	font-weight: bold;
 	line-height: 1;
 
-	&:hover {
+	&:hover, &:active, &:focus {
 		color: #fff;
 		text-decoration: none;
 	}
