--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 			<%= link_to "GTDWGT", root_path, { id: "logo" } %>
 			<nav>
 				<ul class="nav pull-right">
-					<li><%= link_to "Sign in", '#' %></li>
+					<li><%= link_to "Sign in", signin_path %></li>
 				</ul>
 			</nav>
 		</div>
