Implement Session create method, but not sign_in helper

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,3 +1,5 @@
+<!-- Users are ActiveRecord objects, and therefore keep track of errors
+This template renders the errors associated with a user -->
 <% if @user.errors.any? %>
 <div id="error_explanation">
 	<div class="alert alert-error">
