--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="span6 offset3">
 		<%= form_for(@user) do |f| %>
+			<!-- Users are ActiveRecord models, and therefore keep track of errors -->
 			<%= render 'shared/error_messages' %>
 
 			<%= f.label :email %>
