--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
 		<%= yield %>
 	</div>
 	<%= debug(params) if Rails.env.development? %>
+	<%= debug(current_user) if Rails.env.development? %>
 </body>
 </html>
