--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,5 +2,7 @@
 	<h1>Welcome to GTDWGT</h1>
 	<h2>See <a href="https://github.com/thevoiceless/gtdwgt">https://github.com/thevoiceless/gtdwgt</a></h2>
 
-	<%= link_to "Sign Up", signup_path, class: "btn btn-large btn-primary" %>
+	<% if !signed_in? %>
+		<%= link_to "Sign Up", signup_path, class: "btn btn-large btn-primary" %>
+	<% end %>
 </div>
