--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,10 @@
-<h1>Listing users</h1>
+<% provide(:title, "All Users") %>
+<h1>All Users</h1>
 
-<table>
-  <tr>
-    <th>Email</th>
-    <th>Password digest</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.email %></td>
-    <td><%= user.password_digest %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New User', new_user_path %>
+<ul class="users">
+    <% @users.each do |user| %>
+        <li>
+            <%= link_to user.email, user %>
+        </li>
+    <% end %>
+</ul>
