--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Email:</b>
-  <%= @user.email %>
+	<b>Email:</b>
+	<%= @user.email %>
 </p>
 
-
-<%= link_to 'Edit Profile', edit_user_path(@user) %>
+<% if signed_in? && current_user?(@user) %>
+	<%= link_to 'Edit Profile', edit_user_path(@user) %>
+<% end %>
