--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
 <ul class="users">
     <% @users.each do |user| %>
         <li>
+        	<%= image_tag user.photo.url(:tiny) %>
             <%= link_to user.email, user %>
         </li>
     <% end %>
