--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "View User") %>
 <p id="notice"><%= notice %></p>
 
+<%= image_tag @user.photo.url(:small) %>
+
 <p>
 	<b>Email:</b>
 	<%= @user.email %>
