--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,6 +105,14 @@ input {
 	@extend .error;
 }
 
+textarea, input[type="file"] {
+	background-color: white;
+	border: 1px solid rgb(204, 204, 204);
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
+	transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+	margin: 0;
+}
+
 #user_delete_photo {
 	margin: 0;
 	margin-right: 0.5em;
@@ -123,11 +131,4 @@ input {
 			border-bottom: 1px solid $grayLighter;
 		}
 	}
-}
-
-textarea, input[type="file"] {
-    background-color: white;
-    border: 1px solid rgb(204, 204, 204);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
-    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
 }
