Add jQuery button behavior to edit profile page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,15 @@
 <% provide(:title, "Edit Profile") %>
+
+<%= javascript_include_tag "edit_profile" %>
+<script>
+// $(document).ready(function() {
+// 	$('.nav-tabs').button();
+// 	$('#save_button').click(function() {
+// 		$(this).button('loading')
+// 		});
+// });
+</script>
+
 <h1>Edit Your Profile</h1>
 
 <div class="row">
@@ -11,7 +22,7 @@
 			</div>
 			<%= render 'fields', f: f %>
 			<div class="center">
-				<%= f.submit "Save Information", class: "btn btn-large btn-primary" %>
+				<%= f.submit "Save", id: "save_button", class: "btn btn-large btn-primary", data: { loading_text: "Saving..." } %>
 			</div>
 		<% end %>
 	</div>
