Save auth code and linked email

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,11 +7,16 @@
 <div class="row">
 	<div class="span6 offset3">
 		<div class="center">
-			<% #if @user.authorization_code %>
+			<% if @user.authorization_code.nil? %>
 				<%= button_to "Link to a Google account", google_authorization_path, { class: 'btn' } %>
-			<% #else %>
-				<!-- <p>Linked</p> -->
-			<% #end %>
+			<% else %>
+			<% puts "**********************" %>
+			<% puts @user %>
+			<% p @user %>
+			<% puts @user.authorization_code %>
+				<p>Linked to <%= @user.linked_email %></p>
+			<% puts "**********************" %>
+			<% end %>
 		</div>
 		<%= form_for @user, html: { multipart: true } do |f| %>
 			<div class="center">
