Store encrypted auth code, google email, and google name

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
 			<% puts @user %>
 			<% p @user %>
 			<% puts @user.authorization_code %>
-				<p>Linked to <%= @user.linked_email %></p>
+				<p>Linked to <%= @user.g_email %></p>
 			<% puts "**********************" %>
 			<% end %>
 		</div>
