--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
 		<div class="container">
-			<%= link_to "GTDWGT", root_path, id: "logo" %>
+			<% if signed_in? and current_user.authorization_code %>
+				<%= link_to "GTDWGT", tasks_path, id: "logo" %>
+			<% else %>
+				<%= link_to "GTDWGT", root_path, id: "logo" %>
+			<% end %>
 			<nav>
 				<ul class="nav pull-right">
 					<% if signed_in? %>
