--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="span6 offset3">
 		<div class="center">
-			<% if @user.authorization_code.nil? %>
+			<% if @user.access_token.nil? %>
 				<%= button_to "Link to a Google account", google_authorization_path, { class: 'btn' } %>
 			<% else %>
 				<p>Linked to <%= @user.g_email %></p>
