Return to redirecting to root path, add debug for gtapi

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
 	</div>
 	<%= debug(params) if Rails.env.development? %>
 	<%= debug(current_user) if Rails.env.development? %>
+	<%= debug(gtapi) if Rails.env.development? %>
 </body>
 </html>
