--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
 		<div class="container">
-			<% if signed_in? and current_user.access_token %>
+			<% if signed_in? and current_user.authorized_api? %>
 				<%= link_to "GTDWGT", taskinfo_path, id: "logo" %>
 			<% else %>
 				<%= link_to "GTDWGT", root_path, id: "logo" %>
