--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center hero-unit">
 	<h1>Welcome to GTDWGT</h1>
-	<h3>GTDWGT integrates with Google Tasks to help you focus on getting things done. Rather than being tacked on to Google Calendar, GTDWGT puts Google Tasks front and center so that you can more easily manage what you need to do.</h3>
-	<h2>See <a href="https://github.com/thevoiceless/gtdwgt">https://github.com/thevoiceless/gtdwgt</a></h2>
+	<h4>GTDWGT integrates with Google Tasks to help you focus on getting things done. Rather than being tacked on to Google Calendar, GTDWGT puts Google Tasks front and center so that you can easily manage what you need to do.</h4>
+	<h2><a href="https://github.com/thevoiceless/gtdwgt">https://github.com/thevoiceless/gtdwgt</a></h2>
 
 	<% if !signed_in? %>
 		<%= link_to "Sign Up", signup_path, class: "btn btn-large btn-primary" %>
