--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -4,7 +4,7 @@
 <table class="table table-bordered table-condensed">
 	<thead>
 		<tr>
-			<th><%= task_list.title %></th>
+			<th><%= task_list.title %><button type="button" class="btn btn-small btn-primary">Add Task</button></th>
 		</tr>
 	</thead>
 	<tbody>
