--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -1,16 +1,12 @@
 <% provide(:title, "Tasks") %>
 
-<script>
-$(document).ready(function() {
-
-};
-</script>
+<%= button_to "New Task", task_lists_new_task_path, { class: "btn btn-primary" } %>
 
 <% @task_lists.each do |task_list| %>
 <table class="table table-bordered table-condensed">
 	<thead>
 		<tr>
-			<th><%= task_list.title %><button id="add-to-<%= task_list.id %>" type="button" class="btn btn-small btn-primary">Add Task</button></th>
+			<th><%= task_list.title %></th>
 		</tr>
 	</thead>
 	<tbody>
