Add a task to a list

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -138,3 +138,13 @@ textarea, input[type="file"] {
 		}
 	}
 }
+
+/* New task page */
+
+select {
+	padding: 0;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 6px;
+	padding-right: 6px;
+}
