--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -139,6 +139,12 @@ textarea, input[type="file"] {
 	}
 }
 
+/* Tasks page */
+
+th.center {
+	text-align: center;
+}
+
 /* New task page */
 
 select {
