--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -1,12 +1,19 @@
 <% provide(:title, "Tasks") %>
 
-<%= button_to "New Task", new_task_path, { method: :get, class: "btn btn-primary" } %>
+<div class="center">
+	<%= button_to "New Task", new_task_path, { method: :get, class: "btn btn-info btn-large" } %>
+</div>
 
 <% @task_lists.each do |task_list| %>
 <table class="table table-bordered table-condensed">
 	<thead>
 		<tr>
-			<th><%= task_list.title %></th>
+			<th colspan="3" class="center"><%= task_list.title %></th>
+		</tr>
+		<tr>
+			<th>Title</th>
+			<th>Completed?</th>
+			<th>Due</th>
 		</tr>
 	</thead>
 	<tbody>
