--- a/app/views/task_lists/new_task.html.erb
+++ b/app/views/task_lists/new_task.html.erb
@@ -10,7 +10,7 @@
 <div>
 	Notes: <%= text_field_tag "notes" %>
 </div>
-<div>
-	<%= submit_tag 'Submit' %>
+<div class="center">
+	<%= submit_tag 'Save', { class: 'btn btn-success' } %>
 </div>
 <% end %>
