--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,7 +66,7 @@ p {
 	line-height: 1;
 
 	&:hover, &:active, &:focus {
-		color: #fff;
+		color: #51a351;
 		text-decoration: none;
 	}
 }
@@ -153,4 +153,24 @@ select {
 	padding-bottom: 4px;
 	padding-left: 6px;
 	padding-right: 6px;
+}
+
+#notes-area {
+	margin-bottom: 2em;
+}
+
+// Include padding/border/margin in width calculation
+.boxsizingBorder {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+// Fix input height when applying boxsizingBorder
+input[type="text"] {
+	height: auto;
+}
+
+select:focus {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(82, 168, 236, 0.6);
+    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
 }
