--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 	<h2><a href="https://github.com/thevoiceless/gtdwgt">https://github.com/thevoiceless/gtdwgt</a></h2>
 
 	<% if !signed_in? %>
-		<%= link_to "Sign Up", signup_path, class: "btn btn-large btn-primary" %>
+		<%= link_to "Sign Up", signup_path, class: "btn btn-large btn-success" %>
 	<% end %>
 </div>
 
