--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 		<%= form_for(@user) do |f| %>
 			<%= render 'fields', f: f %>
 			<div class="center">
-				<%= f.submit "Sign Up", class: "btn btn-large btn-primary" %>
+				<%= f.submit "Sign Up", class: "btn btn-large btn-success" %>
 			</div>
 		<% end %>
 	</div>
