--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@
 			</div>
 			<%= render 'fields', f: f %>
 			<div class="center">
-				<%= f.submit "Save", id: "save_button", class: "btn btn-large btn-primary", data: { loading_text: "Saving..." } %>
+				<%= f.submit "Save", id: "save_button", class: "btn btn-large btn-success", data: { loading_text: "Saving..." } %>
 			</div>
 		<% end %>
 	</div>
